# src/app/services/models.ts
@@ -2,6 +2,8 @@
 /* eslint-disable */
 /* Code generated by ng-openapi-gen DO NOT EDIT. */
 
+export { ApiResponseBlogResponse } from './models/api-response-blog-response';
+export { ApiResponsePageResponseBlogResponse } from './models/api-response-page-response-blog-response';
 export { AuthenticationRequest } from './models/authentication-request';
 export { AuthenticationResponse } from './models/authentication-response';
 export { BlogRequest } from './models/blog-request';
